--- a/drone-delights/src/App.css
+++ b/drone-delights/src/App.css
@@ -1,1 +1,16 @@
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
 
+html, body, #root {
+  height: 100%;
+}
+
+.app-container {
+  max-width: 1240px;
+  margin: 0 auto;
+  padding: 0 1rem;
+  width: 100%;
+}
