--- a/drone-delights/src/App.css
+++ b/drone-delights/src/App.css
@@ -6,11 +6,12 @@
 
 html, body, #root {
   height: 100%;
+  background-color: #FEF9EF;
+  z-index: -1;
 }
 
 .app-container {
   max-width: 1240px;
   margin: 0 auto;
-  padding: 0 1rem;
   width: 100%;
 }
