--- a/drone-delights/src/components/Navbar/Navbar.css
+++ b/drone-delights/src/components/Navbar/Navbar.css
@@ -5,8 +5,16 @@
     width: 100%;
     height: 80px;
     font-family: "Knewave", system-ui;
-    font-weight: 400;
-    font-style: normal;
+    background-color: #FEF9EF;
+    padding: 0 20px;
+}
+
+.logo-link{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 10px;
+    text-decoration: none;
 }
 
 .full-logo-container{
@@ -51,6 +59,7 @@
     padding: 10px 20px;
     color: #FE6D73;
     border: none;
+    text-decoration: none;
 }
 
 .login-btn{
@@ -59,7 +68,7 @@
 
 .register-btn{
     border-radius: 50px;
-    background-color: #FFCB77;
+    background-color: #FFD899;
 }
 
 .basket-btn{
