--- a/drone-delights/src/components/ItemCard/ItemCard.css
+++ b/drone-delights/src/components/ItemCard/ItemCard.css
@@ -1,4 +1,4 @@
-.food-card {
+.item-card {
   position: relative;
   width: 220px;
   height: 250px;
@@ -6,7 +6,7 @@
   border-radius: 25px;
 }
 
-.food-img {
+.item-img {
   width: 100%;
   height: 167px;
   object-fit: cover;
@@ -87,7 +87,7 @@
   font-family: "Roboto", system-ui;
 }
 
-.food-info-full {
+.item-info-full {
   display: flex;
   flex-direction: column;
   background-color: white;
@@ -99,13 +99,13 @@
   top: 150px;
 }
 
-.food-top-info {
+.item-top-info {
   display: flex;
   align-items: center;
   justify-content: space-between;
 }
 
-.food-name {
+.item-name {
   font-family: "Knewave", system-ui;
   font-size: 20px;
   color: #227c9d;
@@ -127,12 +127,12 @@
   color: #7f7f7f;
 }
 
-.food-middle-bottom-container {
+.item-middle-bottom-container {
   display: flex;
   flex-direction: column;
 }
 
-.food-middle-info {
+.item-middle-info {
   margin-bottom: 2px;
 }
 
@@ -142,14 +142,14 @@
   color: #17c3b2;
 }
 
-.food-bottom-info {
+.item-bottom-info {
   display: flex;
   align-items: center;
   justify-content: space-between;
   position: relative;
 }
 
-.food-description {
+.item-description {
   font-family: "Roboto", system-ui;
   font-size: 12px;
   color: #7f7f7f;
