--- a/drone-delights/src/components/Hero/Hero.css
+++ b/drone-delights/src/components/Hero/Hero.css
@@ -1,97 +1,98 @@
-h2{
-    font-family: "Hachi Maru Pop", cursive;
+h2 {
+  font-family: "Hachi Maru Pop", cursive;
 }
 
-.hero-section{
-    overflow: hidden;
+.hero-section {
+  overflow: hidden;
 }
 
 .hero-top-section {
-    position: relative;
-    height: 518px;
+  position: relative;
+  height: 518px;
 }
 
 .wavey-background {
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: auto;
-    max-width: 100%;
-    object-fit: cover;
-    z-index: 0;
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: auto;
+  max-width: 100%;
+  object-fit: cover;
+  z-index: 0;
 }
 
 .drone-carry-burger {
-    position: absolute;
-    top: 180px;
-    left: 200px;
-    width: 20%;
-    z-index: 1;
-    rotate: -10deg;
+  position: absolute;
+  top: 180px;
+  left: 200px;
+  width: 20%;
+  z-index: 1;
+  rotate: -10deg;
 }
 
 .slogan-container {
-    position: absolute;
-    top: 100px;
-    right: 100px;
-    text-align: right;
-    font-family: "Knewave", system-ui;
-    z-index: 1;
+  position: absolute;
+  top: 100px;
+  right: 100px;
+  text-align: right;
+  font-family: "Knewave", system-ui;
+  z-index: 1;
 }
 
-.slogan-part-one{
-    font-size: 50px;
-    color: #227C9D;
+.slogan-part-one {
+  font-size: 50px;
+  font-weight: 400;
+  color: #227c9d;
 }
 
-.slogan-part-two{
-    font-size: 64px;
-    color: #FE6D73;
+.slogan-part-two {
+  font-size: 64px;
+  font-weight: 400;
+  color: #fe6d73;
 }
 
-.hero-bottom-section{
-    display: flex;
-    align-items: center;
-    gap: 150px;
-    flex-direction: row;
-    margin-bottom: 10px;
+.hero-bottom-section {
+  display: flex;
+  align-items: center;
+  gap: 150px;
+  flex-direction: row;
+  margin-bottom: 10px;
 }
 
 .intro-text-btn-container {
-    display: flex;
-    flex-direction: column;
-    margin-left: 100px;
-    gap: 20px;
+  display: flex;
+  flex-direction: column;
+  margin-left: 100px;
+  gap: 20px;
 }
 
 .intro-text-container {
-    width: 391px;
-    height: 224px;
-    text-align: left;
+  width: 391px;
+  height: 224px;
+  text-align: left;
 }
 
 .see-menu-btn {
-    text-align: center;
-    font-size: 22px;
-    padding: 10px 20px;
-    color: #FE6D73;
-    border: none;
-    background-color: #FFD899;
-    border-radius: 50px;
-    font-family: knewave, system-ui;
-    text-decoration: none;
+  text-align: center;
+  font-size: 22px;
+  padding: 10px 20px;
+  color: #fe6d73;
+  border: none;
+  background-color: #ffd899;
+  border-radius: 50px;
+  font-family: "Knewave", system-ui;
+  text-decoration: none;
 }
 
 .food-card-text-container {
-    display: flex;
-    flex-direction: column;
-    gap: 10px;
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
 }
 
 .food-card-container {
-    display: flex;
-    flex-direction: row;
-    gap: 20px;
+  display: flex;
+  flex-direction: row;
+  gap: 20px;
 }
-
