--- a/drone-delights/src/components/ItemCard/ItemCard.css
+++ b/drone-delights/src/components/ItemCard/ItemCard.css
@@ -14,9 +14,8 @@
 }
 
 /* Fixa med kod sen vad vilken knapp som syns */
-.items-count-container {
+.full-quantity-container {
   display: flex;
-  display: none;
   align-items: center;
   justify-content: space-between;
   position: absolute;
@@ -29,7 +28,7 @@
   border: 1px solid #cccccc;
 }
 
-.counter-btn {
+.quantity-btn {
   display: flex;
   align-items: center;
   justify-content: center;
@@ -43,10 +42,14 @@
 
 /* Fixa med kod sen vad vilken knapp som syns */
 .minus-btn {
+  /* display: none; */
+}
+
+.hide{
   display: none;
 }
 
-.count-container {
+.quantity-container {
   display: flex;
   align-items: center;
   justify-content: center;
@@ -55,11 +58,9 @@
 }
 
 .plus-btn {
-  /* display: none; */
 }
 
 .plus-btn-alone {
-  /* display: none; */
   background-color: white;
   border: 1px solid #cccccc;
   position: absolute;
@@ -67,7 +68,7 @@
   right: 5px;
 }
 
-.counter-icon {
+.quantity-icon {
   font-size: 16px;
 }
 
@@ -83,7 +84,7 @@
   color: #17c3b2;
 }
 
-.count {
+.quantity {
   font-family: "Roboto", system-ui;
 }
 
