finjusterade MostOrderedList så man kan scrolla och använda expand på cards

--- a/drone-delights/src/components/Hero/Hero.css
+++ b/drone-delights/src/components/Hero/Hero.css
@@ -54,7 +54,7 @@ h2 {
 
 .hero-bottom-section {
   display: flex;
-  align-items: center;
+  align-items: flex-start;
   gap: 150px;
   flex-direction: row;
   margin-bottom: 10px;
