--- a/drone-delights/src/components/CartItemCard/CartItemCard.css
+++ b/drone-delights/src/components/CartItemCard/CartItemCard.css
@@ -1,8 +1,11 @@
 .cart-item-card-container {
+  display: flex;
   position: relative;
   width: 775px;
   height: 121px;
-  border-bottom: 1px solid #cccccc;
+  /* padding-bottom: 1px; */
+  border-bottom: 1px solid #BFBFBF;
+  /* border-top: 1px solid #BFBFBF; */
 }
 
 .cart-item-img-container {
@@ -17,15 +20,17 @@
 }
 
 .cart-item-info-container {
-  position: absolute;
+  /* position: absolute; */
+  position: relative;
+  margin-left: -27px;
   display: flex;
   flex-direction: row;
   justify-content: space-between;
   align-items: center;
   width: 629px;
-  height: 121px;
-  top: 0;
-  right: 0;
+  height: 120px;
+  /* top: 0;
+  right: 0; */
   border-radius: 25px 0 0 25px;
   background-color: white;
   z-index: 0;
