--- a/drone-delights/src/components/CartList/CartList.css
+++ b/drone-delights/src/components/CartList/CartList.css
@@ -2,5 +2,6 @@
     margin-top: 38px;
     border-radius: 25px;
     overflow: hidden;
-    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
+    /* border: 1px solid #cccccc; */
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
 }
