--- a/drone-delights/src/components/ItemCard/ItemCard.css
+++ b/drone-delights/src/components/ItemCard/ItemCard.css
@@ -2,7 +2,8 @@
   position: relative;
   width: 220px;
   min-height: 250px;
-  box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.1);
+  /* box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.1); */
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
   border-radius: 25px;
   overflow: visible;
 }
