--- a/drone-delights/src/components/CartSummary/CartSummary.css
+++ b/drone-delights/src/components/CartSummary/CartSummary.css
@@ -1,7 +1,33 @@
 .cart-summary-container{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
     width: 775px;
     height: 92px;
+    padding: 40px;
+    margin-top: 30px;
     background-color: white;
     border-radius: 25px;
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+}
+
+.cart-summary-title{
+    display: flex;
+    gap: 10px;
+    align-items: baseline;
+    font-family: "Knewave", system-ui;
+}
+
+.cart-summary-total{
+    font-size: 32px;
+}
+
+.cart-summary-inc{
+    font-size: 20px;
+}
+
+.cart-summary-price{
+    font-family: "Knewave", system-ui;
+    font-size: 32px;
+    color: #17C3B2
 }
