--- a/drone-delights/src/components/CartSummary/CartSummary.css
+++ b/drone-delights/src/components/CartSummary/CartSummary.css
@@ -1,4 +1,4 @@
-.cart-summary-container{
+.cart-summary-total-container{
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -11,18 +11,19 @@
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
 }
 
-.cart-summary-title{
+.cart-summary-total-title{
     display: flex;
     gap: 10px;
     align-items: baseline;
     font-family: "Knewave", system-ui;
+    color: #404040;
 }
 
-.cart-summary-total{
+.cart-summary-total-text{
     font-size: 32px;
 }
 
-.cart-summary-inc{
+.cart-summary-inc-text{
     font-size: 20px;
 }
 
@@ -30,4 +31,32 @@
     font-family: "Knewave", system-ui;
     font-size: 32px;
     color: #17C3B2
+}
+
+.cart-summary-btn-container{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin-top: 30px;
+    width: 100%;
+    height: 100%;
+}
+
+.cart-summary-btn{
+    font-family: "Knewave", system-ui;
+    font-size: 22px;
+    padding: 10px 20px;
+    color: #FE6D73;
+    border: none;
+}
+
+.cart-summary-continue-shopping-btn{
+    background-color: transparent;
+}
+
+.cart-summary-checkout-btn{
+    text-decoration: none;
+    border-radius: 50px;
+    background-color: #FFD899;
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
 }
