--- a/drone-delights/src/components/CartList/CartList.css
+++ b/drone-delights/src/components/CartList/CartList.css
@@ -2,6 +2,10 @@
     margin-top: 38px;
     border-radius: 25px;
     overflow: hidden;
-    /* border: 1px solid #cccccc; */
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+}
+
+.cart-summary-empty-cart-container{
+    width: 378px;
+    height: 145px;
 }
