--- a/drone-delights/src/components/CartList/CartList.css
+++ b/drone-delights/src/components/CartList/CartList.css
@@ -1,5 +1,5 @@
 .cart-list-container{
-    margin-top: 38px;
+    /* margin-top: 38px; */
     border-radius: 25px;
     overflow: hidden;
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
