skapat en bra grund för delivery info, samt en context för att hantera formuläret över hela appen

--- a/drone-delights/src/pages/CheckoutPage/CheckoutPage.css
+++ b/drone-delights/src/pages/CheckoutPage/CheckoutPage.css
@@ -4,3 +4,15 @@
   align-items: center;
   justify-content: center;
 }
+
+.checkout-page-body {
+  width: 500px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.checkout-page-btns {
+  width: 100%;
+  margin-top: 30px;
+}
