--- a/drone-delights/src/components/CartItemCard/CartItemCard.css
+++ b/drone-delights/src/components/CartItemCard/CartItemCard.css
@@ -1,7 +1,7 @@
 .cart-item-card-container {
   display: flex;
   position: relative;
-  width: 775px;
+  width: 100%;
   height: 121px;
   /* padding-bottom: 1px; */
   border-bottom: 1px solid #BFBFBF;
