--- a/drone-delights/src/components/TotalPrice/TotalPrice.css
+++ b/drone-delights/src/components/TotalPrice/TotalPrice.css
@@ -3,6 +3,7 @@
     justify-content: space-between;
     align-items: center;
     width: 775px;
+    width: 100%;
     height: 92px;
     padding: 40px;
     background-color: white;
