--- a/drone-delights/src/pages/MenuPage/MenuPage.css
+++ b/drone-delights/src/pages/MenuPage/MenuPage.css
@@ -4,3 +4,10 @@
   align-items: center;
   justify-content: center;
 }
+
+.menu-page-body {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
