--- a/drone-delights/src/components/Payment/Payment.css
+++ b/drone-delights/src/components/Payment/Payment.css
@@ -12,12 +12,15 @@
   font-size: 24px;
 }
 
-.payment-info-form {
+
+.payment-info-form-mastercard {
   display: flex;
   flex-direction: column;
   margin-top: 20px;
   gap: 10px;
 }
+
+
 
 label {
   font-size: 16px;
@@ -36,6 +39,56 @@ input {
   color: #666666;
 }
 
+.payment-info-header{
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  height: 40px;
+}
+
+.payment-options-container {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  gap: 20px;
+}
+
+.payment-btn{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border: 1px solid #c4c4c4;
+  background-color: white;
+  border-radius: 12.5px;
+  width: 65px;
+  height: 40px;
+  opacity: 0.4;
+  cursor: pointer;
+}
+
+.swish-btn{
+  
+}
+
+.mastercard-btn{
+}
+
+.selected-btn{
+  opacity: 1;
+  scale: 1.2;
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+}
+
+.swish-icon{
+  width: 24px;
+  height: 33px;
+}
+
+.mastercard-icon{
+  width: 41px;
+  height: 25px;
+}
+
 #nameOnCard {
   width: 420px;
 }
@@ -45,11 +98,11 @@ input {
 }
 
 #expiry {
-  width: 155px;
+  width: 130px;
 }
 
 #cvc {
-  width: 155px;
+  width: 100px;
 }
 
 .submit-btn {
@@ -59,12 +112,28 @@ input {
   border: none;
   background-color: #17c3b2;
   margin-top: 18px;
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
   cursor: pointer;
 }
 
 .submit-arrow {
   font-size: 30px;
   color: white;
+}
+
+.place-order-btn{
+  font-family: "Knewave", system-ui;
+  font-size: 22px;
+  height: 70px;
+  padding: 10px 20px;
+  margin-top: 18px;
+  color: white;
+  border: none;
+  text-align: center;
+  background-color: #17C3B2;
+  border-radius: 50px;
+  text-decoration: none;
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
 }
 
 .form-group {
@@ -80,4 +149,25 @@ input {
 .postal-code-and-city-container {
   display: flex;
   justify-content: space-between;
+}
+
+.payment-info-form-swish {
+  display: flex;
+  flex-direction: column;
+  margin-top: 20px;
+  gap: 10px;
+}
+
+.swish-phone-container {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+#phoneSwish {
+  width: 250px;
+}
+
+.none{
+  display: none;
 }
