--- a/drone-delights/src/pages/CheckoutPage/CheckoutPage.css
+++ b/drone-delights/src/pages/CheckoutPage/CheckoutPage.css
@@ -10,11 +10,11 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+  gap: 30px;
 }
 
 .checkout-page-btns {
   width: 100%;
-  margin-top: 30px;
 }
 
 .hide {
