--- a/drone-delights/src/components/ButtonBar/ButtonBar.css
+++ b/drone-delights/src/components/ButtonBar/ButtonBar.css
@@ -2,7 +2,7 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
-    margin-top: 30px;
+    /* margin-top: 30px; */
     width: 100%;
     height: 100%;
 }
