--- a/drone-delights/src/components/CartSummary/CartSummary.css
+++ b/drone-delights/src/components/CartSummary/CartSummary.css
@@ -3,6 +3,6 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    margin-top: 30px;
+    gap: 30px;
     width: 100%;
 }
