--- a/drone-delights/src/components/Header/Header.css
+++ b/drone-delights/src/components/Header/Header.css
@@ -12,7 +12,7 @@
     top: 0;
     left: 0;
     right: 0;
-    z-index: 1000; /* Se till att den ligger över annat innehåll */
+    z-index: 1000;
 }
 
 .logo-link{
