--- a/drone-delights/src/components/Payment/Payment.css
+++ b/drone-delights/src/components/Payment/Payment.css
@@ -2,7 +2,6 @@
   width: 100%;
   border-radius: 25px;
   padding: 40px;
-  margin-top: 30px;
   background-color: white;
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
   font-family: "Hachi Maru Pop", cursive;
@@ -12,15 +11,12 @@
   font-size: 24px;
 }
 
-
 .payment-info-form-mastercard {
   display: flex;
   flex-direction: column;
   margin-top: 20px;
   gap: 10px;
 }
-
-
 
 label {
   font-size: 16px;
@@ -134,6 +130,7 @@ input {
   border-radius: 50px;
   text-decoration: none;
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+  cursor: pointer;
 }
 
 .form-group {
