--- a/drone-delights/src/components/OrderConfirmation/OrderConfirmation.css
+++ b/drone-delights/src/components/OrderConfirmation/OrderConfirmation.css
@@ -1,12 +1,233 @@
-.order-confirmation-container{
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    width: 500px;
-    height: 500px;
-    background-color: white;
-    border-radius: 25px;
-    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
-    padding: 40px;
+.order-confirmation-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  gap: 50px;
+  width: 600px;
+  background-color: rgba(255, 255, 255, 0.507);
+  border-radius: 25px;
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+  border-top: 1px solid #bfbfbf;
+  border-left: 1px solid #bfbfbf;
+  border-right: 1px solid #bfbfbf;
+  padding: 40px;
+}
+
+.confirmed-container {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 100px;
+  height: 100px;
+}
+
+.confirmed {
+  font-size: 100px;
+  color: #17c3b2;
+}
+
+.order-confirmation-title {
+  display: flex;
+  flex-direction: column;
+  font-family: "Knewave", system-ui;
+  font-weight: 400;
+  font-size: 32px;
+  text-align: center;
+}
+
+.your-order-is {
+  color: #227c9d;
+}
+
+.on-the-way {
+  color: #fe6d73;
+  font-size: 40px;
+}
+
+.order-summary-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  gap: 20px;
+  width: 100%;
+}
+
+.order-items-all-cards-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  border-radius: 12.5px;
+  overflow: hidden;
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+  border-top: 1px solid #bfbfbf;
+  border-left: 1px solid #bfbfbf;
+  border-right: 1px solid #bfbfbf;
+  width: 100%;
+}
+
+.order-item-card-container {
+  display: flex;
+  justify-content: center;
+  width: 100%;
+  height: 80px;
+  overflow: hidden;
+}
+
+.order-image-container {
+  width: 120px;
+  height: 80px;
+}
+
+.order-image {
+  width: 100%;
+  height: 80px;
+  object-fit: cover;
+}
+
+.order-item-details-container {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  background-color: white;
+  border-bottom: 1px solid #bfbfbf;
+  border-radius: 12.5px 0 0 12.5px;
+  width: 100%;
+  height: 80px;
+  margin-left: -20px;
+  padding: 20px;
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+}
+
+.order-item-title {
+  font-family: "Knewave", system-ui;
+  font-weight: 400;
+  font-size: 18px;
+  color: #227c9d;
+}
+
+.ordet-item-price-and-quantity-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  gap: 5px;
+}
+
+.order-item-price {
+  font-family: "Knewave", system-ui;
+  font-size: 16px;
+  color: #17c3b2;
+}
+
+.order-item-quantity-container {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 5px;
+}
+
+.order-item-quantity-text {
+  font-family: "Hachi Maru Pop", cursive;
+  font-size: 12px;
+  color: #404040;
+}
+
+.order-item-quantity {
+  font-family: "Knewave", system-ui;
+  font-size: 16px;
+  color: #404040;
+}
+
+.order-total-cost-container {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  width: 100%;
+  padding: 20px;
+  background-color: white;
+  border-radius: 12.5px;
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+  border-top: 1px solid #bfbfbf;
+  border-left: 1px solid #bfbfbf;
+  border-right: 1px solid #bfbfbf;
+}
+
+.total-cost-row {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  width: 100%;
+}
+
+.total-cost-text {
+  font-family: "Knewave", system-ui;
+  font-size: 20px;
+  color: #404040;
+}
+
+.total-cost-price {
+  font-family: "Knewave", system-ui;
+  font-size: 24px;
+  color: #17c3b2;
+}
+
+.order-delivery-and-payment-container {
+  display: flex;
+  flex-direction: row;
+  align-items: flex-start;
+  justify-content: space-between;
+  background-color: white;
+  border-radius: 12.5px;
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+  padding: 20px;
+  gap: 20px;
+  width: 100%;
+  border-top: 1px solid #bfbfbf;
+  border-left: 1px solid #bfbfbf;
+  border-right: 1px solid #bfbfbf;
+}
+
+.order-payment-method-container {
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  
+}
+
+.payment-method-title {
+  font-family: "Knewave", system-ui;
+  font-weight: 400;
+  font-size: 16px;
+  color: #404040;
+}
+
+.payment-method-text {
+  font-family: "Roboto", system-ui;
+  font-size: 16px;
+  color: #404040;
+}
+
+.order-delivery-address-container {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  /* align-items: flex-end; */
+  width: 100%;
+}
+
+.delivery-address-title {
+  font-family: "Knewave", system-ui;
+  font-weight: 400;
+  font-size: 16px;
+  color: #404040;
+}
+
+.thank-you-text {
+  font-family: "Knewave", system-ui;
+  font-weight: 400;
+  font-size: 32px;
+  color: #227c9d;
 }
