--- a/drone-delights/src/pages/OrderConfirmationPage/OrderConfirmationPage.css
+++ b/drone-delights/src/pages/OrderConfirmationPage/OrderConfirmationPage.css
@@ -4,3 +4,17 @@
     align-items: center;
     justify-content: center;
 }
+
+.order-confirmation-body{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    gap: 20px;
+    width: 600px;
+}
+
+.order-confirmation-btns{
+    width: 100%;
+}
+
