--- a/drone-delights/src/components/Header/Header.css
+++ b/drone-delights/src/components/Header/Header.css
@@ -56,7 +56,45 @@
     display: flex;
     justify-content: center;
     align-items: center;
+    gap: 40px;
+}
+
+.user-dropdown{
+    display: flex;
+    justify-content: center;
+    align-items: baseline;
     gap: 20px;
+}
+
+.dropdown-text{
+    display: flex;
+    justify-content: center;
+    align-items: baseline;
+    gap: 5px;
+}
+
+.user-icon{
+    color: #227C9D;
+    font-size: 28px;
+}
+
+.hi-dropdown-text{
+    font-family: "Knewave", system-ui;
+    font-weight: 400;
+    font-size: 22px;
+    color: #227C9D;
+}
+
+.username-dropdown-text{
+    font-family: "Knewave", system-ui;
+    font-weight: 400;
+    font-size: 28px;
+    color: #FE6D73;
+}
+
+.dropdown-icon{
+    color: #227C9D;
+    font-size: 22px;
 }
 
 .basket-btn{
