--- a/drone-delights/src/components/Header/Header.css
+++ b/drone-delights/src/components/Header/Header.css
@@ -9,6 +9,7 @@
     background-color: #FEF9EF;
     padding: 0 20px;
     position: fixed;
+    user-select: none;
     top: 0;
     left: 0;
     right: 0;
