favoriseringar fungerar per användare

--- a/drone-delights/src/components/ItemCard/ItemCard.css
+++ b/drone-delights/src/components/ItemCard/ItemCard.css
@@ -125,6 +125,11 @@
   color: #7f7f7f;
 }
 
+.fav-selected {
+  color: #fe6d73;
+  /* scale: 1.25; */
+}
+
 .item-middle-bottom-container {
   display: flex;
   flex-direction: column;
