--- a/drone-delights/src/components/Form/FieldStyles.css
+++ b/drone-delights/src/components/Form/FieldStyles.css
@@ -88,6 +88,15 @@
   cursor: pointer;
 }
 
+.icon-container-for-form {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 50px;
+  height: 50px;
+  cursor: pointer;
+}
+
 .icon-pen{
   color: #227C9D;
   font-size: 20px;
