--- a/drone-delights/src/components/Form/FormStyles.css
+++ b/drone-delights/src/components/Form/FormStyles.css
@@ -1,6 +1,3 @@
-
-
-/* FORM */
 .form-container {
   width: 100%;
   border-radius: 25px;
@@ -29,6 +26,19 @@
   gap: 10px;
 }
 
+.form-inputs-row-container {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  gap: 20px;
+}
+
+.form-btns-container {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
 .form-submit-btn {
   font-family: "Knewave", system-ui;
   font-weight: 400;
@@ -46,8 +56,63 @@
   cursor: pointer;
 }
 
+.form-submit-btn-mini {
+  font-size: 30px;
+  color: white;
+  cursor: pointer;
+  height: 70px;
+  width: 70px;
+  border-radius: 50%;
+  border: none;
+  background-color: #17C3B2;
+  margin-top: 18px;
+  cursor: pointer;
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+}
+
+.form-submit-btn-mini.disabled {
+  opacity: 0.5;
+  pointer-events: none;
+  background-color: #bdbdbd;
+  color: #fff;
+  cursor: not-allowed;
+}
+
 .form-submit-btn-blue {
   background-color: #227c9d;
+}
+
+.form-cancel-btn{
+  font-family: "Knewave", system-ui;
+  font-weight: 400;
+  font-size: 30px;
+  width: 70px;
+  height: 70px;
+  margin-top: 18px;
+  color: white;
+  border: none;
+  text-align: center;
+  background-color: #fe6d73;
+  border-radius: 50%;
+  text-decoration: none;
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+  cursor: pointer;
+}
+
+.form-cancel-btn-mini{
+  font-family: "Knewave", system-ui;
+  font-weight: 400;
+  font-size: 30px;
+  width: 50px;
+  height: 50px;
+  color: white;
+  border: none;
+  text-align: center;
+  background-color: #fe6d73;
+  border-radius: 50%;
+  text-decoration: none;
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+  cursor: pointer;
 }
 
 .input-readonly {
