--- a/drone-delights/src/pages/UserPage/UserPage.css
+++ b/drone-delights/src/pages/UserPage/UserPage.css
@@ -9,7 +9,6 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    justify-content: center;
     width: 500px;
-    padding: 20px;
+    gap: 30px;
   }
