--- a/drone-delights/src/components/Form/FieldStyles.css
+++ b/drone-delights/src/components/Form/FieldStyles.css
@@ -74,6 +74,7 @@
   justify-content: space-between;
   align-items: center;
   padding-right: 10px;
+  user-select: none;
 }
 
 .icon-container {
@@ -95,6 +96,7 @@
   width: 50px;
   height: 50px;
   cursor: pointer;
+  z-index: 2;
 }
 
 .icon-pen{
