--- a/drone-delights/src/components/Form/FormStyles.css
+++ b/drone-delights/src/components/Form/FormStyles.css
@@ -1,10 +1,22 @@
 .form-container {
+  position: relative;
   width: 100%;
   border-radius: 25px;
   padding: 40px;
   background-color: white;
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
   font-family: "Hachi Maru Pop", cursive;
+}
+
+.form-header-overlay {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 500px;
+  height: 120px;
+  /* z-index: 2; */
+  cursor: pointer;
+  /* Ingen bakgrund, ingen border – helt osynlig */
 }
 
 .form-header {
@@ -17,6 +29,7 @@
 .form-title {
   font-size: 24px;
   color: #404040;
+  user-select: none;
 }
 
 .form {
