--- a/drone-delights/src/components/Form/FieldStyles.css
+++ b/drone-delights/src/components/Form/FieldStyles.css
@@ -53,7 +53,7 @@
   pointer-events: none;
 }
 
-.clear-input {
+/* .clear-input {
   position: absolute;
   right: 18px;
   top: 52px;
@@ -66,7 +66,7 @@
   padding: 0;
   z-index: 2;
   user-select: none;
-}
+} */
 
 .label-container {
   display: flex;
