--- a/drone-delights/src/components/Form/FormStyles.css
+++ b/drone-delights/src/components/Form/FormStyles.css
@@ -35,14 +35,14 @@
 .form {
   display: flex;
   flex-direction: column;
-  margin-top: 20px;
+  margin-top: 30px;
   gap: 10px;
 }
 
 .form-inputs-row-container {
   display: flex;
-  flex-direction: row;
   justify-content: space-between;
+  align-items: last baseline;
   gap: 20px;
 }
 
