--- a/drone-delights/src/App.css
+++ b/drone-delights/src/App.css
@@ -4,10 +4,13 @@
   box-sizing: border-box;
 }
 
+html {
+  font-size: 16px;
+}
+
 html, body, #root {
   height: 100%;
   background-color: #FEF9EF;
-  z-index: -1;
 }
 
 .app-container {
