--- a/drone-delights/src/components/Home/MenuTeaser/MenuTeaser.css
+++ b/drone-delights/src/components/Home/MenuTeaser/MenuTeaser.css
@@ -1,21 +1,26 @@
-.hero-bottom-section {
-  display: flex;
-  align-items: flex-start;
-  gap: 150px;
-  flex-direction: row;
-  margin-bottom: 10px;
-}
-
-.home-intro-container {
+.menu-teaser-container {
   display: flex;
   flex-direction: column;
-  margin-left: 100px;
-  width: 391px;
-  gap: 20px;
+  margin-left: 6.25rem;
+  width: 24rem;
+  gap: 1.25rem;
 }
 
-.home-intro-text-container {
-  width: 391px;
-  height: 224px;
+.menu-teaser-text-container {
+  width: 24rem;
+  height: 14rem;
   text-align: left;
+}
+
+@media (max-width: 1240px) {
+  .menu-teaser-container {
+    margin-left: 0;
+    width: 100%;
+    padding: 1rem 4rem;
+  }
+
+  .menu-teaser-text-container {
+    width: 100%;
+    height: auto;
+  }
 }
