--- a/drone-delights/src/components/Home/MostOrderedItemsList/MostOrderedItemsList.css
+++ b/drone-delights/src/components/Home/MostOrderedItemsList/MostOrderedItemsList.css
@@ -5,16 +5,16 @@
 .most-ordered-container {
     display: flex;
     flex-direction: column;
-    width: 600px;
-    gap: 10px;
+    width: 40rem;
+    gap: 0.625rem;
 }
 
 .most-ordered-item-cards-container-scroll {
     display: flex;
     flex-direction: row;
-    padding: 0 20px 20px;
-    gap: 40px;
-    width: 600px;
+    padding: 0 3.75rem 1.25rem 1.25rem;
+    gap: 2.5rem;
+    width: 100%;
     overflow-y: auto;
     scrollbar-width: thin;
     scrollbar-color: #17c3b2 transparent;
@@ -24,12 +24,19 @@
 .most-ordered-item-cards-container {
     display: flex;
     flex-direction: row;
-    gap: 40px;
+    gap: 2.5rem;
 }
 
 .most-ordered-item-cards-column{
     display: flex;
     flex-direction: column;
     align-items: center;
-    gap: 40px;
+    gap: 2.5rem;
+}
+
+@media (max-width: 1240px) {
+    .most-ordered-container {
+        width: 100%;
+        padding-left: 2rem;
+    }
 }
