--- a/drone-delights/src/components/Layout/TitleHeader/TitleHeader.css
+++ b/drone-delights/src/components/Layout/TitleHeader/TitleHeader.css
@@ -1,11 +1,11 @@
-.page-header-container {
+.title-header-container {
   position: relative;
   width: 100%;
   height: 265px;
   margin-bottom: 30px;
 }
 
-.page-header-background {
+.title-header-background {
   position: absolute;
   width: 100%;
   height: 100%;
@@ -15,7 +15,7 @@
   z-index: 1;
 }
 
-.page-header-content {
+.title-header-content {
   position: relative;
   height: 100%;
   display: flex;
@@ -24,21 +24,8 @@
   z-index: 2;
 }
 
-.page-header-title {
+.title-header-text {
   display: flex;
   gap: 10px;
   align-items: baseline;
-  font-family: "Knewave", system-ui;
-  font-weight: 400;
-  text-align: center;
-}
-
-.page-header-title-blue {
-  font-size: 50px;
-  color: #227c9d;
-}
-
-.page-header-title-red {
-  font-size: 64px;
-  color: #fe6d73;
 }
