--- a/drone-delights/src/components/Menu/MenuItemCard/MenuItemCard.css
+++ b/drone-delights/src/components/Menu/MenuItemCard/MenuItemCard.css
@@ -1,13 +1,14 @@
-.item-card {
+.menu-item-card {
   position: relative;
   width: 220px;
   min-height: 250px;
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
   border-radius: 25px;
   overflow: visible;
+  user-select: none;
 }
 
-.item-img {
+.menu-item-img {
   width: 100%;
   height: 167px;
   object-fit: cover;
@@ -83,7 +84,7 @@
   font-family: "Roboto", system-ui;
 }
 
-.item-info-full {
+.menu-item-info-full {
   position: relative;
   display: flex;
   flex-direction: column;
@@ -95,18 +96,14 @@
   margin-top: -22px;
 }
 
-.item-top-info {
+.menu-item-top-info {
   display: flex;
   align-items: center;
   justify-content: space-between;
 }
 
-.item-name {
-  width: 160px;
-  font-family: "Knewave", system-ui;
-  font-size: 20px;
-  color: #227c9d;
-  user-select: none;
+.menu-item-name {
+  width: 10rem;
 }
 
 .add-to-favourites-btn {
@@ -130,13 +127,13 @@
   /* scale: 1.25; */
 }
 
-.item-middle-bottom-container {
+.menu-item-middle-bottom-container {
   display: flex;
   flex-direction: column;
   cursor: pointer;
 }
 
-.item-middle-info {
+.menu-item-middle-info {
   margin-bottom: 2px;
 }
 
@@ -147,14 +144,14 @@
   user-select: none;
 }
 
-.item-bottom-info {
+.menu-item-bottom-info {
   display: flex;
   align-items: center;
   justify-content: space-between;
   position: relative;
 }
 
-.item-description {
+.menu-item-description {
   font-family: "Roboto", system-ui;
   font-size: 16px;
   color: #7f7f7f;
