--- a/drone-delights/src/pages/HomePage/HomePage.css
+++ b/drone-delights/src/pages/HomePage/HomePage.css
@@ -1,12 +1,22 @@
 .home-page-container {
-    width: 100%;
+  width: 100%;
 }
 
 .home-page-body {
-    display: flex;
-    align-items: flex-start;
-    gap: 150px;
-    flex-direction: row;
-    margin-bottom: 10px;
+  display: flex;
+  flex-direction: row;
+  align-items: flex-start;
+  justify-content: space-between;
+  overflow: hidden;
+  width: 100%;
+  gap: 6rem;
+}
+
+@media (max-width: 1240px) {
+  .home-page-body {
+    flex-direction: column-reverse;
+    align-items: center;
+    justify-content: center;
+    gap: 2rem;
   }
-  
+}
