--- a/drone-delights/src/styles/TypographyStyles.css
+++ b/drone-delights/src/styles/TypographyStyles.css
@@ -10,6 +10,21 @@
   font-family: "Roboto", sans-serif;
 }
 
+/* COMPANY NAME */
+.company-name-blue, .company-name-red {
+  font-family: "Knewave", system-ui;
+  font-size: clamp(2rem, 4vw, 2.8rem);
+  font-weight: 400;
+}
+
+.company-name-blue {
+  color: #227c9d;
+}
+
+.company-name-red {
+  color: #fe6d73;
+}
+
 /* TITLEHEADER */
 .title-header-blue,
 .title-header-red {
