--- a/drone-delights/src/components/Layout/Header/Header.css
+++ b/drone-delights/src/components/Layout/Header/Header.css
@@ -53,32 +53,32 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  gap: 40px;
+  gap: 2.5rem;
 }
 
-.user-dropdown {
+/* .user-dropdown {
   display: flex;
   justify-content: center;
   align-items: baseline;
-  gap: 20px;
-}
+  gap: 1.25rem;
+} */
 
-.dropdown-text {
+/* .dropdown-text {
   display: flex;
   justify-content: center;
   align-items: baseline;
-  gap: 5px;
+  gap: 0.5rem;
 }
 
 .user-icon {
   color: #227c9d;
-  font-size: 28px;
+  font-size: 1.75rem;
 }
 
 .hi-dropdown-text {
   font-family: "Knewave", system-ui;
   font-weight: 400;
-  font-size: 22px;
+  font-size: 1.375rem;
   color: #227c9d;
 }
 
@@ -92,7 +92,7 @@
 .dropdown-icon {
   color: #227c9d;
   font-size: 22px;
-}
+} */
 
 .basket-btn {
   display: flex;
@@ -132,7 +132,7 @@
   display: none;
 }
 
-.container-test{
+.all-header-btns-container{
     display: flex;
     justify-content: center;
     align-items: center;
