--- a/drone-delights/src/components/Layout/UserMenu/UserMenuStyles.css
+++ b/drone-delights/src/components/Layout/UserMenu/UserMenuStyles.css
@@ -1,80 +1,66 @@
 /* USER MENU CONTAINER */
-.dropdown-container {
+.mobile-user-menu-container, .user-menu-container-container {
   position: relative;
 }
 
 /* USER MENU LINK */
-.dropdown-button-container {
+.user-menu-button-container {
   display: flex;
   justify-content: center;
   align-items: baseline;
-  gap: 20px;
+  gap: 1.25rem;
   cursor: pointer;
 }
 
-.dropdown-text {
+.user-menu-text {
   display: flex;
   justify-content: center;
   align-items: baseline;
-  gap: 5px;
+  gap: 0.5rem;
 }
 
 .user-icon {
   color: #227c9d;
-  font-size: 28px;
-}
-
-.hi-dropdown-text {
-  font-family: "Knewave", system-ui;
-  font-weight: 400;
-  font-size: 22px;
-  color: #227c9d;
-}
-
-.username-dropdown-text {
-  font-family: "Knewave", system-ui;
-  font-weight: 400;
-  font-size: 28px;
-  color: #fe6d73;
+  font-size: 1.75rem;
 }
 
 .dropdown-icon {
   color: #227c9d;
-  font-size: 22px;
+  font-size: 1.5rem;
 }
 
 /* USERMENU */
-.dropdown-menu-container {
+.user-menu-container {
   position: absolute;
   display: flex;
   flex-direction: column;
   align-items: flex-start;
   justify-content: center;
-  top: 60px;
-  left: 0;
+  top: clamp(3.25rem, 5vw, 3.75rem);
+  right: 0;
   background-color: #fef9ef;
   border-radius: 0 0 12.5px 12.5px;
-  padding: 20px;
+  padding: 1.25rem;
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.1);
   z-index: 1000;
 }
 
-.dropdown-menu-btn {
+.user-menu-btn {
   display: flex;
   align-items: center;
   text-decoration: none;
-  gap: 10px;
+  gap: 0.625rem;
   border: none;
   background-color: transparent;
   cursor: pointer;
 }
 
-.dropdown-menu-btn-icon {
+.user-menu-btn-icon {
   font-size: 22px;
   color: #227c9d;
 }
 
-.dropdown-menu-btn-text {
+.user-menu-btn-text {
   display: flex;
   font-family: "Knewave", system-ui;
   color: #fe6d73;
@@ -91,9 +77,5 @@
 @media (max-width: 900px) {
   .mobile-only {
     display: flex;
-  }
-
-  .header-btns-container {
-    display: none;
   }
 }
