--- a/drone-delights/src/styles/TypographyStyles.css
+++ b/drone-delights/src/styles/TypographyStyles.css
@@ -13,8 +13,8 @@
 /* COMPANY NAME */
 .company-name-blue, .company-name-red {
   font-family: "Knewave", system-ui;
-  font-size: clamp(2rem, 4vw, 2.8rem);
   font-weight: 400;
+  font-size: clamp(2rem, 4vw, 2.8rem);
 }
 
 .company-name-blue {
@@ -22,6 +22,22 @@
 }
 
 .company-name-red {
+  color: #fe6d73;
+}
+
+/* USERMENU DROPDOWN */
+.user-menu-text-hi, .user-menu-text-username{
+  font-family: "Knewave", system-ui;
+  font-weight: 400;
+}
+
+.user-menu-text-hi{
+  font-size: 1.5rem;
+  color: #227c9d;
+}
+
+.user-menu-text-username{
+  font-size: 1.75rem;
   color: #fe6d73;
 }
 
