--- a/drone-delights/src/components/Cart/CartItemCard/CartItemCard.css
+++ b/drone-delights/src/components/Cart/CartItemCard/CartItemCard.css
@@ -2,35 +2,30 @@
   display: flex;
   position: relative;
   width: 100%;
-  height: 121px;
-  /* padding-bottom: 1px; */
-  border-bottom: 1px solid #BFBFBF;
-  /* border-top: 1px solid #BFBFBF; */
+  height: 7.5rem;
+  border-bottom: 1px solid #bfbfbf;
 }
 
 .cart-item-img-container {
-  width: 173px;
-  height: 121px;
+  width: clamp(10rem, 20vw, 15rem);
+  height: 7.5rem;
 }
 
 .cart-item-img {
   width: 100%;
-  height: 121px;
+  height: 7.5rem;
   object-fit: cover;
 }
 
 .cart-item-info-container {
-  /* position: absolute; */
   position: relative;
-  margin-left: -27px;
+  margin-left: -1.7rem;
   display: flex;
   flex-direction: row;
   justify-content: space-between;
   align-items: center;
-  width: 629px;
-  height: 120px;
-  /* top: 0;
-  right: 0; */
+  width: 100%;
+  height: 7.437rem;
   border-radius: 25px 0 0 25px;
   background-color: white;
   z-index: 0;
@@ -39,48 +34,49 @@
 .cart-item-left-info {
   display: flex;
   flex-direction: column;
-  justify-content: center;
-  width: 220px;
-  padding-left: 20px;
+  justify-content: space-between;
+  gap: 0.5rem;
+  width: clamp(7rem, 15vw, 13.75rem);
+  padding-left: 1.25rem;
 }
 
-.cart-item-name {
-  font-family: "Knewave", system-ui;
-  font-size: 20px;
-  color: #227c9d;
+.cart-item-card-name {
+  width: clamp(4rem, 15vw, 13.75rem);
 }
 
-.cart-item-price {
-  font-family: "Knewave", system-ui;
-  font-size: 16px;
-  color: #17c3b2;
+.cart-item-card-price {
+  width: clamp(4rem, 15vw, 13.75rem);
 }
 
 .cart-item-middle-info {
   display: flex;
   flex-direction: column;
   justify-content: center;
-  width: 250px;
+  width: clamp(7rem, 20vw, 13.75rem);
 }
 
-.cart-item-description {
-  font-family: "Roboto", system-ui;
-  font-size: 16px;
-  color: #7f7f7f;
+.cart-item-card-description {
+  width: clamp(7rem, 20vw, 13.75rem);
+}
+
+.cart-item-middle-right-container {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  width: 60%;
+  gap: 1rem;
 }
 
 .cart-item-right-info {
-  padding-right: 20px;
+  padding-right: 1.25rem;
 }
 
 .cart-item-full-quantity-container {
   display: flex;
   align-items: center;
   justify-content: space-between;
-  top: 110px;
-  right: 5px;
-  width: 102px;
-  height: 34px;
+  width: 6.375rem;
+  height: 2.125rem;
   background-color: white;
   border-radius: 25px;
   border: 1px solid #cccccc;
@@ -90,8 +86,8 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  width: 34px;
-  height: 34px;
+  width: 2.125rem;
+  height: 2.125rem;
   border: none;
   background-color: transparent;
   border-radius: 25px;
@@ -106,13 +102,12 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  width: 34px;
-  height: 34px;
+  width: 2.125rem;
+  height: 2.125rem;
 }
 
-
 .cart-item-quantity-icon {
-  font-size: 16px;
+  font-size: 1rem;
 }
 
 .cart-item-trash-icon {
@@ -129,4 +124,36 @@
 
 .cart-item-quantity {
   font-family: "Roboto", system-ui;
+}
+
+@media (max-width: 768px) {
+  .cart-item-info-container{
+    justify-content: none;
+  }
+
+  .cart-item-middle-right-container {
+    flex-direction: column;
+    height: 100%;
+    align-items: flex-end;
+    justify-content: space-between;
+    gap: 0;
+    padding-right: 1rem;
+    padding-top: 1rem;
+    padding-bottom: 1rem;
+    width: 80%;
+  }
+
+  .cart-item-middle-info {
+    width: 100%;
+    align-items: center;
+    justify-content: center;
+  }
+
+  .cart-item-right-info{
+    padding-right: 0;
+  }
+
+  .cart-item-card-name, .cart-item-card-price{
+    width: 100%;
+  }
 }
