--- a/drone-delights/src/components/Cart/CartItemsList/CartItemsList.css
+++ b/drone-delights/src/components/Cart/CartItemsList/CartItemsList.css
@@ -1,8 +1,8 @@
 .cart-list-container{
-    /* margin-top: 38px; */
     border-radius: 25px;
     overflow: hidden;
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+    width: 100%;
 }
 
 .cart-summary-empty-cart-container{
