--- a/drone-delights/src/components/Shared/TotalPrice/TotalPrice.css
+++ b/drone-delights/src/components/Shared/TotalPrice/TotalPrice.css
@@ -1,34 +1,23 @@
-.total-price-container{
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    width: 775px;
-    width: 100%;
-    height: 92px;
-    padding: 40px;
-    background-color: white;
-    border-radius: 25px;
-    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+.total-price-container {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  width: 100%;
+  height: clamp(4rem, 10vw, 5.75rem);
+  padding: 2.5rem;
+  background-color: white;
+  border-radius: 25px;
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
 }
 
-.total-price-title{
-    display: flex;
-    gap: 10px;
-    align-items: baseline;
-    font-family: "Knewave", system-ui;
-    color: #404040;
+.total-price-wrapper {
+  display: flex;
+  align-items: baseline;
+  gap: clamp(0.5rem, 1vw, 1rem);
 }
 
-.total-price-total-text{
-    font-size: 32px;
-}
-
-.total-price-inc-text{
-    font-size: 20px;
-}
-
-.total-price{
-    font-family: "Knewave", system-ui;
-    font-size: 32px;
-    color: #17C3B2
+.total-price-title,
+.total-price-inc-text {
+  display: flex;
+  align-items: baseline;
 }
