--- a/drone-delights/src/components/Cart/EmptyCart/EmptyCart.css
+++ b/drone-delights/src/components/Cart/EmptyCart/EmptyCart.css
@@ -1,45 +1,30 @@
-.cart-empty-container{
-    width: 378px;
+.empty-cart-container{
+    width: clamp(15rem, 50vw, 30rem);
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    margin-top: 100px;
-    gap: 50px;
+    margin-top: clamp(2rem, 4vw, 5rem);
+    gap: 3rem;
 }
 
-.cart-empty-text-container{
+.empty-cart-text-container{
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    font-family: "Knewave", system-ui;
-    font-size: 40px;
-    color: #227C9D;
 }
 
+.empty-cart-line{
+    display: flex;
+    align-items: baseline;
+    gap: clamp(0.3rem, 2vw, 1rem);
+}
+  
 .no-food{
     text-decoration: solid underline;
-}
-
-.belly{
-    font-size: 50px;
-    color: #FE6D73;
 }
 
 .smiley{
     color: #404040;
 }
-
-.cart-empty-see-menu-btn {
-    text-align: center;
-    font-size: 22px;
-    padding: 10px 20px;
-    color: #fe6d73;
-    border: none;
-    background-color: #ffd899;
-    border-radius: 50px;
-    font-family: "Knewave", system-ui;
-    text-decoration: none;
-    width: 100%;
-  }
