--- a/drone-delights/src/components/UI/Input/FieldStyles.css
+++ b/drone-delights/src/components/UI/Input/FieldStyles.css
@@ -2,6 +2,10 @@
   position: relative;
 }
 
+.form-input{
+  width: 100%;
+}
+
 .edit-input,
 .save-input,
 .cancel-input {
@@ -12,7 +16,7 @@
   cursor: pointer;
   z-index: 2;
 }
-/* .edit-input { right: 12px; color: #888; } */
+
 .save-input { right: 36px; color: #27ae60; }
 .cancel-input { right: 12px; color: #e74c3c; }
 
@@ -21,7 +25,7 @@
 .success {
   font-family: "Roboto", system-ui;
   font-weight: 400;
-  font-size: 16px;
+  font-size: clamp(0.6rem, 2.5vw, 1rem);
 }
 
 .error {
@@ -43,16 +47,23 @@
 }
 
 /* ICONS */
-.input-checkmark {
-  position: absolute;
-  right: 18px;
-  top: 52px;
-  transform: translateY(-50%);
-  color: #27ae60;
-  font-size: 1.3em;
-  pointer-events: none;
+.input-wrapper{
+  width: 100%;
+  position: relative;
 }
 
+.icon-wrapper{
+  font-size: 1.3em;
+  position: absolute;
+  transform: translateY(-50%);
+  top: 50%;
+  right: 1rem;
+}
+
+.input-checkmark {
+  color: #27ae60;
+  pointer-events: none;
+}
 /* .clear-input {
   position: absolute;
   right: 18px;
@@ -75,6 +86,10 @@
   align-items: center;
   padding-right: 10px;
   user-select: none;
+}
+
+.label-title{
+  font-size: clamp(0.8rem, 2.5vw, 1rem);
 }
 
 .icon-container {
@@ -119,9 +134,11 @@
 .password-toggle {
   color: #7f7f7f;
   cursor: pointer;
-  font-size: 1.2em;
+  font-size: 1.2rem;
 }
 
 .form-group input {
-  padding-right: 2.2em;
+  padding-right: 2.2rem;
+  height: clamp(2rem, 8vw, 3.5rem);
+  font-size: clamp(0.8rem, 2.5vw, 1rem);
 }
