--- a/drone-delights/src/pages/RegisterPage/RegisterPage.css
+++ b/drone-delights/src/pages/RegisterPage/RegisterPage.css
@@ -10,6 +10,6 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  width: 500px;
-  padding: 20px;
+  padding: 1.25rem;
+  width: clamp(20rem, 80vw, 30rem);
 }
