--- a/drone-delights/src/styles/FormStyles.css
+++ b/drone-delights/src/styles/FormStyles.css
@@ -1,11 +1,11 @@
 .form-container {
+  font-family: "Hachi Maru Pop", cursive;
   position: relative;
   width: 100%;
   border-radius: 25px;
-  padding: 40px;
+  padding: 2.5rem;
   background-color: white;
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
-  font-family: "Hachi Maru Pop", cursive;
 }
 
 .form-header-overlay {
@@ -21,11 +21,11 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  height: 40px;
 }
 
 .form-title {
-  font-size: 24px;
+  font-size: clamp(1rem, 3.5vw, 1.5rem);
+  padding-left: 0.625rem;
   color: #404040;
   user-select: none;
 }
@@ -33,8 +33,14 @@
 .form {
   display: flex;
   flex-direction: column;
-  margin-top: 30px;
-  gap: 10px;
+  margin-top: clamp(1rem, 4vw, 2rem);
+  gap: clamp(1rem, 4vw, 2rem);
+}
+
+.form-inputs-container{
+  display: flex;
+  flex-direction: column;
+  gap: clamp(0.6rem, 3vw, 1.5rem);
 }
 
 .form-inputs-row-container {
