--- a/drone-delights/src/pages/UserPage/UserPage.css
+++ b/drone-delights/src/pages/UserPage/UserPage.css
@@ -9,6 +9,6 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    width: 500px;
-    gap: 30px;
+    width: clamp(20rem, 80vw, 30rem);
+    gap: 1.875rem;
   }
