--- a/drone-delights/src/styles/FormStyles.css
+++ b/drone-delights/src/styles/FormStyles.css
@@ -34,20 +34,20 @@
   display: flex;
   flex-direction: column;
   margin-top: clamp(1rem, 4vw, 2rem);
-  gap: clamp(1rem, 4vw, 2rem);
+  gap: clamp(0.6rem, 3vw, 2rem);
 }
 
 .form-inputs-container{
   display: flex;
   flex-direction: column;
-  gap: clamp(0.6rem, 3vw, 1.5rem);
+  gap: clamp(0.6rem, 3vw, 2rem);
 }
 
 .form-inputs-row-container {
   display: flex;
   justify-content: space-between;
   align-items: last baseline;
-  gap: 20px;
+  gap: clamp(0.6rem, 3vw, 2rem);
 }
 
 .form-btns-container {
@@ -142,4 +142,22 @@
   display: flex;
   align-items: center;
   gap: 5px;
+}
+
+@media (max-width: 768px) {
+  /* .form-header {
+    flex-direction: column;
+    align-items: flex-start;
+  }
+
+  .form-title {
+    font-size: clamp(1rem, 5vw, 1.5rem);
+    padding-left: 0;
+    margin-bottom: 0.5rem;
+  } */
+
+  .form-inputs-row-container {
+    flex-direction: column;
+    align-items: normal
+  }
 }
