--- a/drone-delights/src/components/User/UserPaymentCard/UserPaymentCard.css
+++ b/drone-delights/src/components/User/UserPaymentCard/UserPaymentCard.css
@@ -6,6 +6,21 @@
   gap: 1rem;
 }
 
+.payment-card-details-container{
+  display: flex;
+  align-items: center; 
+  justify-content: center;
+  gap: 0.5rem;
+}
+
+.payment-card-btns-container {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  width: 7.5rem;
+  gap: 0.5rem;
+}
+
 .payment-method-card-primary-container-active,
 .payment-method-card-primary-container {
   display: flex;
@@ -14,13 +29,16 @@
   align-items: center;
   padding: 0.5rem 0.5rem;
   width: clamp(3rem, 20vw, 5rem);
-  height: 1.8rem;
+  width: 100%;
+  height: 1.875rem;
 }
 
 .payment-method-card-primary-container-active {
   font-family: "Roboto", system-ui;
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
   font-weight: bold;
   font-size: 1rem;
+  font-size: clamp(0.6rem, 2vw, 1rem);
   background-color: #00d82f;
   border-radius: 12.5px;
   color: white;
@@ -33,6 +51,7 @@
   align-items: flex-start;
   flex-wrap: nowrap;
   width: 11.25rem;
+  width: auto;
   height: 1.875rem;
   font-size: clamp(0.6rem, 2vw, 0.8rem);
 }
@@ -48,7 +67,7 @@
   border: dotted 2px #CCCCCC;
   color: #CCCCCC;
   background-color: transparent;
-  width: clamp(3rem, 20vw, 5rem);
+  width: auto;
   height: 1.875rem;
   padding: 0.5rem 0.5rem;
   border-radius: 12.5px;
