--- a/drone-delights/src/styles/ButtonStyles.css
+++ b/drone-delights/src/styles/ButtonStyles.css
@@ -74,6 +74,7 @@
   border: none;
   text-align: center;
   text-decoration: none;
+  flex-shrink: 0;
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
   cursor: pointer;
 }
