--- a/drone-delights/src/styles/PaymentStyles.css
+++ b/drone-delights/src/styles/PaymentStyles.css
@@ -181,10 +181,10 @@ input {
   display: none;
 }
 
-.payment-methods-display-form {
+/* .payment-methods-display-form {
     display: flex;
     flex-direction: column;
     margin-top: 30px;
     gap: 30px;
   }
-  
+   */
