småjusteringar i user settings, responsivitet för delivery och payment i checkout nu

--- a/drone-delights/src/components/User/PaymentsCardsList/PaymentsCardsList.css
+++ b/drone-delights/src/components/User/PaymentsCardsList/PaymentsCardsList.css
@@ -1,5 +1,5 @@
 .payment-cards-list-container{
     display: flex;
     flex-direction: column;
-    gap: 20px;
+    gap: clamp(0.8rem, 3vw, 1.5rem);
 }
