--- a/drone-delights/src/components/Layout/TitleHeader/TitleHeader.css
+++ b/drone-delights/src/components/Layout/TitleHeader/TitleHeader.css
@@ -1,7 +1,6 @@
 .title-header-container {
   position: relative;
   width: 100%;
-  /* height: 265px; */
   height: clamp(5rem, 21.5vw, 16.5rem);
   margin-bottom: 30px;
 }
@@ -30,4 +29,5 @@
   display: flex;
   gap: 10px;
   align-items: baseline;
+  user-select: none;
 }
