--- a/drone-delights/src/styles/FormStyles.css
+++ b/drone-delights/src/styles/FormStyles.css
@@ -12,8 +12,8 @@
   position: absolute;
   top: 0;
   left: 0;
-  width: 500px;
-  height: 120px;
+  width: 100%;
+  height: 8rem;
   cursor: pointer;
 }
 
@@ -21,6 +21,7 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
+  height: 3.125rem;
 }
 
 .form-title {
