--- a/drone-delights/src/pages/OrderConfirmationPage/OrderConfirmationPage.css
+++ b/drone-delights/src/pages/OrderConfirmationPage/OrderConfirmationPage.css
@@ -10,8 +10,8 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    gap: 20px;
-    width: 600px;
+    gap: 1.875rem;
+    width: clamp(20rem, 80vw, 30rem);
 }
 
 .order-confirmation-btns{
